inseritFrittoFatto